fized bugs where header img not showing up

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -174,14 +174,18 @@ input[type=submit]:active {
 /* HEADER */
 /* -------------------------------- */
 
-header {
-    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0, 0.8)),to(rgba(0,0,0, 0.8)));
-    background-image: linear-gradient(rgba(0,0,0, 0.8),rgba(0,0,0, 0.8)), url(/Resources/CSS/img/hero.jpg);
+#home-section {
+    background: url(/Resources/CSS/img/hero.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
     background-attachment: fixed;
-    
+}
+#home-section .dark-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0, 0.8);
 }
 .hero-text-box {
     position: absolute;
